--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   /*========== Colors ==========*/
   /* Change favorite color to match images */
   /*Green dark 190 - Green 171 - Grren Blue 200*/
-  --hue-color: 190;
+  --hue-color: 55;
 
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 64%, 22%);
@@ -470,6 +470,7 @@ input {
 .discover__title,
 .discover__description {
   color: var(--white-color);
+  padding-bottom: 20px;
 }
 
 .discover__title {
@@ -552,7 +553,7 @@ input {
 }
 
 /*=============== VIDEO ===============*/
-
+/*
 .video__container {
   padding-bottom: 1rem;
 }
@@ -572,7 +573,7 @@ input {
   bottom: -1rem;
   padding: 1rem 1.5rem;
 }
-
+*/
 /*=============== PLACES ===============*/
 
 .place__card,
@@ -654,6 +655,7 @@ input {
 }
 
 /*=============== SUBSCRIBE ===============*/
+/*
 .subscribe__bg {
   background-color: var(--first-color-second);
   padding: 2.5rem 0;
@@ -687,9 +689,9 @@ input {
 .subscribe__input::placeholder {
   color: var(--text-color);
 }
-
+*/
 /*=============== SPONSORS ===============*/
-
+/*
 .sponsor__container {
   grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
   justify-items: center;
@@ -705,9 +707,9 @@ input {
 .sponsor__img:hover {
   filter: invert(0.5);
 }
-
+*/
 /*=============== SPONSORS ===============*/
-
+/*
 .footer__container {
   row-gap: 5rem;
 }
@@ -773,7 +775,7 @@ input {
 .footer__terms-link:hover {
   color: var(--text-color);
 }
-
+*/
 /*========== SCROLL UP ==========*/
 .scrollup {
   position: fixed;
